fix windows build

--- a/.github/workflows/build_rust.yaml
+++ b/.github/workflows/build_rust.yaml
@@ -52,14 +52,12 @@ jobs:
         run: mkdir -p release
 
       - name: Copy binary to release directory
-        run: 
-        
-        if [ "${{ matrix.os }}" == 'windows-latest' ]; then
-          cp target/release/rustpython.exe release/rustpython-${{ matrix.os }}.exe
-        else
-            cp target/release/rustpython release/rustpython-${{ matrix.os }}
+        run: |
+          if [ "${{ matrix.os }}" == 'windows-latest' ]; then
+            cp target/release/rustpython.exe release/rustpython-${{ matrix.os }}.exe
+          else
+              cp target/release/rustpython release/rustpython-${{ matrix.os }}
           fi
-        run: cp target/release/rustpython release/rustpython-${{ matrix.os }}
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
