fix windows build

--- a/.github/workflows/build_rust.yaml
+++ b/.github/workflows/build_rust.yaml
@@ -51,13 +51,13 @@ jobs:
       - name: Create release directory
         run: mkdir -p release
 
-      - name: Copy binary to release directory
-        run: |
-          if [ "${{ matrix.os }}" == 'windows-latest' ]; then
-            cp target/release/rustpython.exe release/rustpython-${{ matrix.os }}.exe
-          else
-              cp target/release/rustpython release/rustpython-${{ matrix.os }}
-          fi
+      - name: Copy binary to release directory Windows
+        if: matrix.os == 'windows-latest'
+        run: cp target/release/rustpython.exe release/rustpython-${{ matrix.os }}.exe
+
+      - name: Copy binary to release directory POSIX
+        if: matrix.os != 'windows-latest'
+        run: cp target/release/rustpython release/rustpython-${{ matrix.os }}
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
