--- a/.github/workflows/build_rust.yaml
+++ b/.github/workflows/build_rust.yaml
@@ -43,7 +43,7 @@ jobs:
             ${{ runner.os }}-cargo-index
 
       - name: Build
-        run: cargo build --release
+        run: cargo build --feature ssl --release
 
       - name: Run tests
         run: cargo test --release
@@ -59,76 +59,33 @@ jobs:
         if: matrix.os != 'windows-latest'
         run: cp target/release/rustpython release/rustpython-${{ matrix.os }}
 
-      - name: Upload build artifacts
+      - name: Upload build artifacts for POSIX
         uses: actions/upload-artifact@v4
+        if: matrix.os != 'windows-latest'
         with:
           name: rustpython-${{ matrix.os }}
           path: release/rustpython-${{ matrix.os }}
 
-  release:
-    name: Create Release
-    runs-on: ubuntu-latest
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
+      - name: Upload build artifacts for Windows
+        uses: actions/upload-artifact@v4
+        if: matrix.os == 'windows-latest'
         with:
-          name: rustpython-ubuntu-latest
-          path: ./release
+          name: rustpython-${{ matrix.os }}.exe
+          path: release/rustpython-${{ matrix.os }}.exe
+      
+       - name: Build IDF example
+        run: cargo build --feature ssl --release --example embeded_idf
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
+       - name: Upload IDF example artifact artifacts for POSIX
+        uses: actions/upload-artifact@v4
+        if: matrix.os != 'windows-latest'
         with:
-          name: rustpython-windows-latest
-          path: ./release
+          name: embeded_idf
+          path: target/release/examples/embeded_idf
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
+      - name: Upload IDF example artifact artifacts for Windows
+        uses: actions/upload-artifact@v4
+        if: matrix.os == 'windows-latest'
         with:
-          name: rustpython-macos-latest
-          path: ./release
-
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Asset (Ubuntu)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release/rustpython-ubuntu-latest
-          asset_name: rustpython-ubuntu-latest
-          asset_content_type: application/octet-stream
-
-      - name: Upload Release Asset (Windows)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release/rustpython-windows-latest
-          asset_name: rustpython-windows-latest.exe
-          asset_content_type: application/octet-stream
-
-      - name: Upload Release Asset (macOS)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release/rustpython-macos-latest
-          asset_name: rustpython-macos-latest
-          asset_content_type: application/octet-stream
+          name: embeded_idf.exe
+          path: target/release/examples/embeded_idf.exe
