--- a/.github/workflows/build_rust.yaml
+++ b/.github/workflows/build_rust.yaml
@@ -26,6 +26,14 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: Install openSSL on windows
+        if: matrix.os == 'windows-latest'
+        run: vcpkg integrate install
+
+      - name: Install OpenSSL
+        if: matrix.os == 'windows-latest'
+        run: powershell.exe ./.github/workflows/Install-OpenSSL.ps1
+
       - name: Cache cargo registry
         uses: actions/cache@v4
         with:
