--- a/.github/workflows/build_rust.yaml
+++ b/.github/workflows/build_rust.yaml
@@ -26,13 +26,12 @@ jobs:
           toolchain: stable
           override: true
 
-      - name: Install openSSL on windows
-        if: matrix.os == 'windows-latest'
-        run: vcpkg integrate install
-
-      - name: Install OpenSSL
-        if: matrix.os == 'windows-latest'
-        run: powershell.exe ./.github/workflows/Install-OpenSSL.ps1
+      - name: Install OpenSSL (Windows)
+        if: runner.os == 'Windows'
+        shell: powershell
+        run: |
+          echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
+          vcpkg install openssl:x64-windows-static-md
 
       - name: Cache cargo registry
         uses: actions/cache@v4
