--- a/.github/workflows/build_rust.yaml
+++ b/.github/workflows/build_rust.yaml
@@ -91,12 +91,12 @@ jobs:
         uses: actions/upload-artifact@v4
         if: matrix.os != 'windows-latest'
         with:
-          name: embeded_idf
+          name: embeded_idf-${{ matrix.os }}
           path: release/embeded_idf-${{ matrix.os }}
       
       - name: Copy binary to release directory Windows
         if: matrix.os == 'windows-latest'
-        run: cp target/release/example/embeded_idf.exe release/embeded_idf-${{ matrix.os }}.exe
+        run: cp target\release\example\embeded_idf.exe release\embeded_idf-${{ matrix.os }}.exe
 
       - name: Upload IDF example artifact artifacts for Windows
         uses: actions/upload-artifact@v4
