--- a/.github/workflows/build_rust.yaml
+++ b/.github/workflows/build_rust.yaml
@@ -33,6 +33,10 @@ jobs:
           echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
           vcpkg install openssl:x64-windows-static-md
 
+      - name: Install OpenSSL (Macos)
+        if: matrix.os == 'macos-latest' 
+        run: brew install openssl
+
       - name: Cache cargo registry
         uses: actions/cache@v4
         with:
@@ -93,7 +97,11 @@ jobs:
         with:
           name: embeded_idf-${{ matrix.os }}
           path: release/embeded_idf-${{ matrix.os }}
-      
+
+      - name: tree directory Windows
+        if: matrix.os == 'windows-latest'
+        run: tree /F
+
       - name: Copy binary to release directory Windows
         if: matrix.os == 'windows-latest'
         run: cp target\release\example\embeded_idf.exe release\embeded_idf-${{ matrix.os }}.exe
