--- a/.github/workflows/build_rust.yaml
+++ b/.github/workflows/build_rust.yaml
@@ -85,7 +85,7 @@ jobs:
           path: release/rustpython-${{ matrix.os }}.exe
       
       - name: Build IDF example
-        run: cargo build --features ssl --release --example embeded_idf
+        run: cargo build --release --example embeded_idf
 
       - name: Copy binary to release directory POSIX
         if: matrix.os != 'windows-latest'
