--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,7 @@ widestring = "1.1.0"
 windows-sys = "0.52.0"
 
 [features]
-default = ["threading", "stdlib", "zlib", "importlib", "ssl", "freeze-stdlib"]
+default = ["threading", "stdlib", "zlib", "importlib", "ssl-vendor", "freeze-stdlib"]
 importlib = ["rustpython-vm/importlib"]
 encodings = ["rustpython-vm/encodings"]
 stdlib = ["rustpython-stdlib", "rustpython-pylib", "encodings"]
