--- a/.github/workflows/build_rust.yaml
+++ b/.github/workflows/build_rust.yaml
@@ -61,6 +61,18 @@ jobs:
 
       - name: Create release directory
         run: mkdir -p release
+      
+      - name: Zip required files
+        if: matrix.os == 'ubuntu-latest' 
+        run: |
+         zip -r artifacts.zip ./Lib ./examples
+      
+      - name: Upload artifact
+        if: matrix.os == 'ubuntu-latest' 
+        uses: actions/upload-artifact@v2
+        with:
+          name: additional files
+          path: artifact.zip
 
       - name: Copy binary to release directory Windows
         if: matrix.os == 'windows-latest'
