--- a/.github/workflows/build_rust.yaml
+++ b/.github/workflows/build_rust.yaml
@@ -69,10 +69,10 @@ jobs:
       
       - name: Upload artifact
         if: matrix.os == 'ubuntu-latest' 
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-          name: additional files
-          path: artifact.zip
+          name: additional_files.zip
+          path: artifacts.zip
 
       - name: Copy binary to release directory Windows
         if: matrix.os == 'windows-latest'
